docs: 优化Java 8到Java 17升级指南内容结构
精简文章结构，聚焦核心升级要点
移除冗余代码示例，突出关键特性对比
加强JVM/GC优化内容，增加容器环境支持说明